--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
         <div class="logo">
             <img src="Imagenes/LOGO.ico" width="80" alt="">
         </div>
+        <div class="logo1">
+            <a href="https://www.se.com/ar/es/"><img src="Imagenes/1x/Recurso 4.png" width="100" alt=""></a>
+        </div>
+        <div class="logo2">
+            <a href="https://new.abb.com/south-america/el-latam-tour"><img src="Imagenes/1x/Recurso 5.png" width="100" alt=""></a>
+        </div>
         <nav class="navbar">
             <tr>
             <a href="https://www.instagram.com/enerpampa.sa/"><img src="Imagenes/insta.png" width="20" alt=""></a>
             <a href="https://www.facebook.com/people/Enerpampa-SA-Distribuidor-de-Materiales-El%C3%A9ctricos/100063664860017/?ref=page_internal&mt_nav=0"><img src="Imagenes/face.png" width="20" alt=""></a>
-            <a href="#CONTACTO">Inicio</a>
+            <a href="#">Inicio</a>
             <a href="#">Nosotros</a>
             <a href="#">ConTacto</a>
             <a href="#">Productos</a>
@@ -90,14 +96,30 @@
     <section class="content about">
         <br>
         <h2 class="title">Nosotros</h2>
+        <div class="cuadro1">
+            <p>Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. Ut soluta similique 
+                quia reprehenderit eligendi aliquam. Sit 
+                odio impedit quibusdam. Velit corporis, 
+                optio debitis quidem ex ipsam rerum dolorem autem sequi.
+            </p>   
+        </div>
+        <div class="cuadro2">
+            <p>Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. Ut soluta similique 
+                quia reprehenderit eligendi aliquam. Sit 
+                odio impedit quibusdam. Velit corporis, 
+                optio debitis quidem ex ipsam rerum dolorem autem sequi.
+            </p>
+        </div>
+        <div class="cuadro3">
         <p>Lorem ipsum dolor sit amet consectetur 
             adipisicing elit. Ut soluta similique 
             quia reprehenderit eligendi aliquam. Sit 
             odio impedit quibusdam. Velit corporis, 
             optio debitis quidem ex ipsam rerum dolorem autem sequi.
         </p>
-
-        <a href="#" class="btn">Saber mas</a>
+    </div>
 
     </section>
 
@@ -171,14 +193,20 @@
             <a href="https://www.google.com/maps/place/ENERPAMPA+S.+A./@-34.658319,-58.5352655,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcc90a8b940961:0xf3487b128b69db7f!8m2!3d-34.6583674!4d-58.5330233"><img src="imagenes/MAPA.png" height="220px" width="100%" alt="mapa"></a>
                 
         </figure>
-        <ul>
-            <li>
-                <p>ventas@enerpampa.com</p>
-            </li>
-            <li>
-                <p>1212312321</p>
-            </li>
-        </ul>
+        <div class="info">
+            <ul>
+                <li>
+                    <p>ventas@enerpampa.com</p>
+                </li>
+                <li>
+                    <p>1212312321</p>
+                </li>
+            </ul>
+            <ul>
+                <li>Mansilla 640</li>
+            </ul>
+        </div>
+       
         <br>
     <br>
     <br>
