--- a/slidde/slide.html
+++ b/slidde/slide.html
@@ -17,10 +17,10 @@
 
     <div class="slide">
         <div class="item-slide">
-            <img src="imgslide/SLIDE PAGINA 1.jpg">
+            <img src="imgslide/slide 1 doble.jpg">
         </div>
         <div class="item-slide">
-            <img src="imgslide/SLIDE PAGINA 2.jpg">
+            <img src="imgslide/slide 2 doble.jpg">
         </div>
         <div class="item-slide">
             <img src="imgslide/SLIDE PAGINA 3.jpg">
@@ -28,10 +28,10 @@
     </div>
         <div class="pagination">
             <label class="pagination-item" for="1"> 
-                <img src="imgslide/SLIDE PAGINA 1.jpg">
+                <img src="imgslide/slide 1 doble.jpg">
             </label>
             <label class="pagination-item" for="2"> 
-                <img src="imgslide/SLIDE PAGINA 2.jpg">
+                <img src="imgslide/slide 2 doble.jpg">
             </label>
             <label class="pagination-item" for="3"> 
                 <img src="imgslide/SLIDE PAGINA 3.jpg">
