--- a/index.html
+++ b/index.html
@@ -39,46 +39,47 @@
     </header>
 
     <section class="content sau">
-
+        <br>
+        <br>
+        <br>
+        <img src="imagenes/1x/fondo.jpeg" width="1000">
         <h2 class="title">Productos</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
-            elit. Veritatis excepturi dolore, harum asperiores 
-            cupiditate officiis quia odit reiciendis quidem iure 
-            architecto laudantium 
-            nihil saepe pariatur vel labore molestias consectetur veniam?</p>
+        <p></p>
         
         <div class="box-container">
             <br>
     
-            <div class="box">
+            <div class="box1">
                 <br>
-                <i class="fab fa-angular"></i>
-                <h3>Distribucion electrica</h3>
-                <p>labore molestias consectetur veniam</p>
+                <h3>CONTROL DE POTENCIA</h3>
+                <br>
+                <img src="imagenes/1x/potencia.jpg" width="300">
             </div>
-            <div class="box">
+            <div class="box2">
                 <br>
-                <i class="fab fa-apple"></i>
-                <h3>Control de Potencia</h3>
-                <p>labore molestias consectetur veniam</p>
-            </div>
-            <div class="box">
-                <br>
-                <i class="fab fa-android"></i>
                 <h3>Automatizacion</h3>
-                <p>labore molestias consectetur veniam</p>
-            </div>
-            <div class="box">
                 <br>
-                <i class="fab fa-angular"></i>
+                <img src="imagenes/1x/bombinia.jpg" width="300">
+            </div>
+            <div class="box3">
+                <br>
+                <h3>Distribucion electrica domestica</h3>
+                <br>
+                <img src="imagenes/1x/lam.jpg" width="300">
+            </div>
+            <div class="box4">
+                <br>
                 <h3>Monitoreo de redes</h3>
                 <p>labore molestias consectetur veniam</p>
             </div>
-            <div class="box">
+            <div class="box5">
                 <br>
-                <i class="fab fa-angular"></i>
                 <h3>Accesorios</h3>
                 <p>labore molestias consectetur veniam</p>
+            </div>
+            <div class="box6">
+                <br>
+                <h3>Distribucion electrica industrial</h3>
             </div>
             <br>
         </div>
