--- a/index.html
+++ b/index.html
@@ -41,25 +41,41 @@
         <div class="fondo">
         <br>
         <br>
-        <br>
         <h2 class="title">Productos</h2>
         <p></p>
-        
-        <div class="box-container">
-            <br>
-    
-            <div class="box1">
-                <br>
-                <h3>CONTROL DE POTENCIA</h3>
-                <br>
-                <img src="imagenes/1x/potencia.jpg" width="300">
-            </div>
-            <div class="box2">
-                <br>
-                <h3>Automatizacion</h3>
-                <br>
-                <img src="imagenes/1x/bombinia.jpg" width="300">
-            </div>
+            <div class="contenedor1">
+                <a href="#">
+                     <figure>
+                         <img src="imagenes/1x/potencia.jpg">
+                         <div class="capa1">
+                             <h3>Control de Potencia</h3>
+                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
+                         </div>
+                     </figure>
+                 </a>
+             </div>
+             <div class="contenedor2">
+                 <a href="#">
+                      <figure>
+                          <img src="imagenes/1x/bombinia.jpg">
+                          <div class="capa2">
+                              <h3>Distribucion electrica domestica</h3>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
+                          </div>
+                      </figure>
+                  </a>
+              </div>
+              <div class="contenedor3">
+                <a href="#">
+                     <figure>
+                         <img src="imagenes/1x/bombinia.jpg">
+                         <div class="capa3">
+                             <h3>Monitoreo de Redes</h3>
+                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
+                         </div>
+                     </figure>
+                 </a>
+             </div>
             <div class="box3">
                 <br>
                 <h3>Distribucion electrica domestica</h3>
