--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estiloindex.css">
     <link rel="stylesheet" href="slider.css">
     <title>ENERPAMPA.SA</title>
 
@@ -113,6 +113,24 @@
                      </figure>
                  </a>
                 </div>
+                <div class="contenedor7">
+                    <a href="#">
+                         <figure>
+                             <img src="imagenes/1x/bombinia.jpg">
+                             <div class="capa7">
+                                 <h3>Monitoreo de Redes</h3>
+                                 <p>CUADRITO 7</p>
+                             </div>
+                         </figure>
+                     </a>
+                    </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
