--- a/panel_control.html
+++ b/panel_control.html
@@ -5,5 +5,6 @@
         <a href = "eliminar-producto.html">Dar de baja producto</a>
         <a href = "editar-producto.html">Editar informacion de producto</a>
         <a href = "volver-activar-producto.html">Volver a activar producto</a>
+        <a href = "nuevo_producto_copiado.html">Agregar producto en base a otros</a>
     </body>
 </html>
