--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <div class="contenedor1">
                 <a href="#">
                      <figure>
-                         <img src="imagenes/1x/potencia.jpg">
+                         <img src="imagenes/1x/DIST. INDUSTRIAL.jpg">
                          <div class="capa1">
-                             <h3>Control de Potencia</h3>
-                             <p>CUADRITO 1</p>
+                             <h3>Distribucion electrica industrial</h3>
+                             <p>Contamos con un amplio</p>
                          </div>
                      </figure>
                  </a>
@@ -73,7 +73,7 @@
               <div class="contenedor3">
                 <a href="#">
                      <figure>
-                         <img src="imagenes/1x/bombinia.jpg">
+                         <img src="imagenes/1x/CONTROL DE POTENCIA.jpg">
                          <div class="capa3">
                              <h3>CUADRITO 3</h3>
                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
@@ -84,7 +84,7 @@
              <div class="contenedor4">
                 <a href="#">
                      <figure>
-                         <img src="imagenes/1x/bombinia.jpg">
+                         <img src="imagenes/1x/AUTOMATIZACION.jpg">
                          <div class="capa4">
                              <h3>Monitoreo de Redes</h3>
                              <p>CUADRITO 4</p>
@@ -95,7 +95,7 @@
              <div class="contenedor5">
                 <a href="#">
                      <figure>
-                         <img src="imagenes/1x/bombinia.jpg">
+                         <img src="imagenes/1x/DIST. COMERCIAL.jpg">
                          <div class="capa5">
                              <h3>Monitoreo de Redes</h3>
                              <p>CUADRITO 5</p>
@@ -106,7 +106,7 @@
              <div class="contenedor6">
                 <a href="#">
                      <figure>
-                         <img src="imagenes/1x/bombinia.jpg">
+                         <img src="imagenes/1x/MONITOREO DE REDES.jpg">
                          <div class="capa6">
                              <h3>Monitoreo de Redes</h3>
                              <p>CUADRITO 6</p>
@@ -117,7 +117,7 @@
                 <div class="contenedor7">
                     <a href="#">
                          <figure>
-                             <img src="imagenes/1x/bombinia.jpg">
+                             <img src="imagenes/1x/ACCESORIOS.jpg">
                              <div class="capa7">
                                  <h3>Monitoreo de Redes</h3>
                                  <p>CUADRITO 7</p>
