--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estiloindex.css">
     <link rel="stylesheet" href="estilocards.css">
     <link rel="stylesheet" href="slider.css">
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <title>ENERPAMPA.SA</title>
 
 </head>
@@ -31,7 +32,7 @@
             <a href="#">Nosotros</a>
             <a href="#">ConTacto</a>
             <a href="#">Productos</a>
-            <a href="#">Marcas</a>
+            <a href="iniciar_sesion.html">Iniciar sesion</a>
         </tr>
         </nav>
     </div>
@@ -45,7 +46,7 @@
         <br>
         <br>
         <br>
-        <h2 class="title">Productos</h2>
+        <h2 class="title">Productos:</h2>
         <br> 
         <p></p>
             <div class="contenedor1">
@@ -54,7 +55,7 @@
                          <img src="imagenes/1x/DIST. INDUSTRIAL.jpg">
                          <div class="capa1">
                              <h3>Distribucion electrica industrial</h3>
-                             <p>Contamos con un amplio asdfasd asdasdas sdasdasda sdasdasda sadasdads</p>
+                             <p>Todo lo necesario en interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
                          </div>
                      </figure>
                  </a>
@@ -76,7 +77,7 @@
                          <img src="imagenes/1x/CONTROL DE POTENCIA.jpg">
                          <div class="capa3">
                              <h3>Control de potencia</h3>
-                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, vero!</p>
+                             <p>Linea completa de salida motor, contactores, variadores, arrancadores, motores y sus respectivas protecciones.</p>
                          </div>
                      </figure>
                  </a>
@@ -86,8 +87,8 @@
                      <figure>
                          <img src="imagenes/1x/AUTOMATIZACION.jpg">
                          <div class="capa4">
-                             <h3>Monitoreo de Redes</h3>
-                             <p>CUADRITO 4</p>
+                             <h3>AUTOMATIZACION</h3>
+                             <p>Arquitecturas de sistemas automatizados con PLC, HMI, sensores y sistemas scada.</p>
                          </div>
                      </figure>
                  </a>
@@ -97,8 +98,8 @@
                      <figure>
                          <img src="imagenes/1x/DIST. COMERCIAL.jpg">
                          <div class="capa5">
-                             <h3>Monitoreo de Redes</h3>
-                             <p>CUADRITO 5</p>
+                             <h3>Distribucion electrica terciara</h3>
+                             <p>Gama o linea completa de conductores, canalizaciones, gabinetes y todo lo que respecta a protecciones de personas e instalaciones.</p>
                          </div>
                      </figure>
                  </a>
@@ -109,7 +110,7 @@
                          <img src="imagenes/1x/MONITOREO DE REDES.jpg">
                          <div class="capa6">
                              <h3>Monitoreo de Redes</h3>
-                             <p>CUADRITO 6</p>
+                             <p>Provedores de instrumentos para el control del consumo de energia y su comunicacion para administrar el consumo.</p>
                          </div>
                      </figure>
                  </a>
@@ -119,8 +120,8 @@
                          <figure>
                              <img src="imagenes/1x/ACCESORIOS.jpg">
                              <div class="capa7">
-                                 <h3>Monitoreo de Redes</h3>
-                                 <p>CUADRITO 7</p>
+                                 <h3>Accesorios</h3>
+                                 <p>Gama completa en instrumentos de medicion, herramientas, accesorios que hacen a la instalacion y al trabajo en la misma.</p>
                              </div>
                          </figure>
                      </a>
@@ -262,20 +263,24 @@
                     </figure>
                 </div>
                 <div class="box">
-                    <h2>Contacto:</h2>
+                    <h2>Direccion:</h2>
                     <p>Mansilla 640 Lomas del Mirador.</p>
                     <br>
-                    <img src="Imagenes/1x/telef.png" width="30" alt=""><p>  7546-5690</p>
-                  
+                    <img src="Imagenes/1x/telef.png" width="30" alt="">
+                    <p>7546-5690 7533-2216</p>
+                    <p>2106-0462 7547-6554</p>
+                    
                 </div>
                 <div class="box">
-                    <h2>SIGUENOS</h2>
+                    <h2>Redes sociales:</h2>
                     <div class="red-social">
-                        <a href="#" class="fa fa-facebook"></a>
-                        <a href="#" class="fa fa-instagram"></a>
-                        <a href="#" class="fa fa-twitter"></a>
-                        <a href="#" class="fa fa-youtube"></a>
+                        <a href="https://www.facebook.com/people/Enerpampa-SA-Distribuidor-de-Materiales-El%C3%A9ctricos/100063664860017/?ref=page_internal&mt_nav=0" class="fa fa-facebook"></a>
+                        <a href="https://www.instagram.com/enerpampa.sa/" class="fa fa-instagram"></a>
+                        <a href="https://www.linkedin.com/in/enerpampa-s-a-355a45254/" class="fa fa-linkedin"></a>
                     </div>
+                    <br>
+                    <br>
+                    <h2>Mail de contacto: ventas@enerpampa.com</h2>
                 </div>
             </div>
     </section>
