--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="https://www.facebook.com/people/Enerpampa-SA-Distribuidor-de-Materiales-El%C3%A9ctricos/100063664860017/?ref=page_internal&mt_nav=0"><img src="Imagenes/face.png" width="20" alt=""></a>
             <a href="#">Inicio</a>
             <a href="#">Nosotros</a>
-            <a href="#">ConTacto</a>
-            <a href="#">Productos</a>
+            <a href="pie-pagina">ConTacto</a>
+            <a href="#contenedor1">Productos</a>
             <a href="iniciar_sesion.html">Iniciar sesion</a>
         </tr>
         </nav>
@@ -50,12 +50,12 @@
         <br> 
         <p></p>
             <div class="contenedor1">
-                <a href="#">
+                <a href="#contenedor1">
                      <figure>
                          <img src="imagenes/1x/DIST. INDUSTRIAL.jpg">
                          <div class="capa1">
                              <h3>Distribucion electrica industrial</h3>
-                             <p>Todo lo necesario en interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
+                             <p>Todo lo necesario en maniobra y monitoreo de redes de baja tensión, interruptores de potencia, ductos, bandejas, cables subterraneos y protecciones</p>
                          </div>
                      </figure>
                  </a>
@@ -107,9 +107,9 @@
              <div class="contenedor6">
                 <a href="#">
                      <figure>
-                         <img src="imagenes/1x/MONITOREO DE REDES.jpg">
+                         <img src="imagenes/1x/ILUMINACIÓN.jpg">
                          <div class="capa6">
-                             <h3>Monitoreo de Redes</h3>
+                             <h3>ILUMINACIÓN</h3>
                              <p>Provedores de instrumentos para el control del consumo de energia y su comunicacion para administrar el consumo.</p>
                          </div>
                      </figure>
@@ -120,7 +120,7 @@
                          <figure>
                              <img src="imagenes/1x/ACCESORIOS.jpg">
                              <div class="capa7">
-                                 <h3>Accesorios</h3>
+                                 <h3>ACCESORIOS</h3>
                                  <p>Gama completa en instrumentos de medicion, herramientas, accesorios que hacen a la instalacion y al trabajo en la misma.</p>
                              </div>
                          </figure>
@@ -256,6 +256,7 @@
     <br>
     
         <footer class="pie-pagina">
+            <a href="#pie-pagina"></a>
             <div class="grupo-1">
                 <div class="box">
                     <figure>
