--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="imagenes/inicio/1x/Mesa de trabajo 1.png" style="width:100%">
+            <img src="imagenes/inicio/medicion.jpg" style="width:100%">
             <div class="text"></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="imagenes/inicio/1x/Mesa de trabajo 4.png" style="width:100%">
+            <img src="imagenes/inicio/CASA.jpg" style="width: 1280px" style="height: 500px">
             <div class="text"></div>
         </div>
 
@@ -150,7 +150,7 @@
         <br>
         <br>
         <br>
-        <h2 class="title">Productos:</h2>
+        <h2 class="title" id="productos">Productos:</h2>
         <br> 
         <p></p>
             <div class="contenedor1">
