--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="imagenes/inicio/CASA.jpg" style="width: 1280px" style="height: 500px">
+            <img src="imagenes/1x/imgs1.png" width="1200" height="800"/>
             <div class="text"></div>
         </div>
 
@@ -84,59 +84,59 @@
             <div class="slider">
                 <div class="slide-track">
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/1.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/2.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 3.png" alt="">
+                        <img src="imagenes/inicio/1x/9.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/8.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/3.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 6.png" alt="">
+                        <img src="imagenes/inicio/1x/4.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 7.png" alt="">
+                        <img src="imagenes/inicio/1x/5.png" alt="">
                     </div>
         
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/6.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/10.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/11.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/12.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/13.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/14.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/15.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/16.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/17.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/18.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="imagenes/inicio/1x/Mesa de trabajo 2.png" alt="">
+                        <img src="imagenes/inicio/1x/19.png" alt="">
                     </div>
                 </div>
             </div>
