--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/inicio/CASA.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/inicio/prueba-01.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/inicio/p1.jpg" class="d-block w-100" alt="...">
+            <img src="imagenes/inicio/prueba-02.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="imagenes/inicio/1x/Mesa de trabajo 5.png" class="d-block w-100" alt="...">
+            <img src="imagenes/inicio/prueba-03.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
