--- a/iniciar_sesion.html
+++ b/iniciar_sesion.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
     <body>
         <h2>Ingresar datos del usuario</h2>   
@@ -6,7 +7,7 @@
         <br>
         <h3>Mail</h3>   
         <p><input type="mail" name="mail" id="prod"></p> 
-        <h3>Contrasenia</h3>   
+        <h3>Contraseña</h3>   
         <p><input type="text" name="contrasenia" id="prod"></p> 
         <ul><li><button type="submit">Ingresar</button></li></ul>
         <a href = "registrarse.html">Si no tiene cuenta, registrese</a>
