--- a/iniciar_sesion.html
+++ b/iniciar_sesion.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-    <body>
-        <h2>Ingresar datos del usuario</h2>   
-        <hr />
-        <form action="inicio_sesion_usuario.php" method="post"  > 
-        <br>
-        <h3>Mail</h3>   
-        <p><input type="mail" name="mail" id="prod"></p> 
-        <h3>Contraseña</h3>   
-        <p><input type="text" name="contrasenia" id="prod"></p> 
-        <ul><li><button type="submit">Ingresar</button></li></ul>
-        <a href = "registrarse.html">Si no tiene cuenta, registrese</a>
-    </body>
+    
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estiloiniciosesion.css">
+    <title>INICIO DE SESION</title>
+</head>
+
+<body>
+  <section class="form-register">
+    <form action="inicio_sesion_usuario.php" method="post"  > 
+    <h4>Inicio de sesion</h4>
+    <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
+    <input class="controls" type="password" name="correo" id="correo" placeholder="Ingrese su Contraseña">
+    <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
+    <input class="botons" type="submit" value="Ingresar">
+    <p><a href="registrarse.html">No tengo cuenta</a></p>
+  </section>
+
+</body>
 </html>
