--- a/panel_control.html
+++ b/panel_control.html
@@ -1,4 +1,10 @@
-<html>
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+</head>
     <body>
         <p>Seleccione una opcion</p>
         <a href = "agregar-producto.html">Ingresar producto nuevo</a>
@@ -6,5 +12,15 @@
         <a href = "editar-producto.html">Editar informacion de producto</a>
         <a href = "volver-activar-producto.html">Volver a activar producto</a>
         <a href = "nuevo_producto_copiado.html">Agregar producto en base a otros</a>
+   
+<div class="list-group">
+    <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+     <a href = "agregar-producto.html">Ingresar producto nuevo</a> 
+    </button>
+    <button type="button" class="list-group-item list-group-item-action"> <a href = "agregar-producto.html">Ingresar producto nuevo</a></button>
+    <button type="button" class="list-group-item list-group-item-action">A third button item</button>
+    <button type="button" class="list-group-item list-group-item-action">A fourth button item</button>
+    <button type="button" class="list-group-item list-group-item-action" disabled>A disabled button item</button>
+  </div>
     </body>
-</html>
+  </html>
