--- a/panel_control.html
+++ b/panel_control.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
-    <body>
-        <p>Seleccione una opcion</p>
-        <a href = "agregar-producto.html">Ingresar producto nuevo</a>
-        <a href = "eliminar-producto.html">Dar de baja producto</a>
-        <a href = "editar-producto.html">Editar informacion de producto</a>
-        <a href = "volver-activar-producto.html">Volver a activar producto</a>
-        <a href = "nuevo_producto_copiado.html">Agregar producto en base a otros</a>
-   
-<div class="list-group">
-    <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
-     <a href = "agregar-producto.html">Ingresar producto nuevo</a> 
-    </button>
-    <button type="button" class="list-group-item list-group-item-action"> <a href = "agregar-producto.html">Ingresar producto nuevo</a></button>
-    <button type="button" class="list-group-item list-group-item-action">A third button item</button>
-    <button type="button" class="list-group-item list-group-item-action">A fourth button item</button>
-    <button type="button" class="list-group-item list-group-item-action" disabled>A disabled button item</button>
-  </div>
-    </body>
-  </html>
+<html lang="es">
+
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <title>Fixed Sidebar Menu Html CSS</title>
+            <link rel="stylesheet" href="panel_control.css" />
+            <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+          </head>
+          <body>
+            <div class="sidebar">
+              <h2>ENERPAMPA</h2>
+              <ul class="nav">
+                <li>
+                  <a href="agregar-producto.html">
+                    <i class="fas fa-server"></i>
+                    <span>Ingresar producto nuevo</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="eliminar-producto.html">
+                    <i class="fas fa-concierge-bell"></i>
+                    <span>Eliminar producto</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="editar-producto.html">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>Editar producto</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="volver-activar-producto.html">
+                    <i class="fas fa-cog"></i>
+                    <span>Volver a activar producto</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="nuevo_producto_copiado.html">
+                    <i class="fas fa-address-card"></i>
+                    <span>Agregar productos en base a otros</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            </div>
+          </body>
+        </html>
