--- a/iniciar_sesion.html
+++ b/iniciar_sesion.html
@@ -13,8 +13,8 @@
   <section class="form-register">
     <form action="inicio_sesion_usuario.php" method="post"  > 
     <h4>Inicio de sesion</h4>
-    <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
-    <input class="controls" type="password" name="correo" id="correo" placeholder="Ingrese su Contraseña">
+    <input class="controls" type="email" name="correo" id="correo" placeholder="Correo">
+    <input class="controls" type="password" name="correo" id="correo" placeholder="Contraseña">
     <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
     <input class="botons" type="submit" value="Ingresar">
     <p><a href="registrarse.html">No tengo cuenta</a></p>
