--- a/panel_control.html
+++ b/panel_control.html
@@ -4,13 +4,15 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>Fixed Sidebar Menu Html CSS</title>
+            <title>SECCION PRODUCTO</title>
             <link rel="stylesheet" href="panel_control.css" />
             <script src="https://kit.fontawesome.com/a076d05399.js"></script>
           </head>
           <body>
+            <h2 class="title" id="productos">Seleccionar alguna opcion</h2>
+            <hr>
             <div class="sidebar">
-              <h2>ENERPAMPA</h2>
+              <img src="imagenes/LOGO.ico"width="80" alt="">
               <ul class="nav">
                 <li>
                   <a href="agregar-producto.html">
@@ -21,7 +23,7 @@
                 <li>
                   <a href="eliminar-producto.html">
                     <i class="fas fa-concierge-bell"></i>
-                    <span>Eliminar producto</span>
+                    <span>Desafectar producto</span>
                   </a>
                 </li>
                 <li>
@@ -42,6 +44,18 @@
                     <span>Agregar productos en base a otros</span>
                   </a>
                 </li>
+                <li>
+                    <a href="index.html">
+                      <i class="fas fa-address-card"></i>
+                      <span>Eliminar definitvamente producto</span>
+                    </a>
+                  </li>
+                <li>
+                    <a href="index.html">
+                      <i class="fas fa-address-card"></i>
+                      <span>Volver</span>
+                    </a>
+                  </li>
               </ul>
             </div>
             </div>
