--- a/registrarse.html
+++ b/registrarse.html
@@ -12,10 +12,10 @@
 <body>
   <section class="form-register">
     <h4>Formulario Registro</h4>
-    <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
-    <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido">
-    <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
-    <input class="controls" type="password" name="correo" id="correo" placeholder="Ingrese su Contraseña">
+    <input class="controls" type="text" name="nombres" id="nombres" placeholder="Nombre">
+    <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Apellido">
+    <input class="controls" type="email" name="correo" id="correo" placeholder="Correo">
+    <input class="controls" type="password" name="correo" id="correo" placeholder="Contraseña">
     <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
     <input class="botons" type="submit" value="Registrar">
     <p><a href="iniciar_sesion.html">Ya tengo Cuenta</a></p>
