--- a/eliminar-producto.html
+++ b/eliminar-producto.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h2>Ingresar codigo del producto a eliminar (solo el codigo de fabricante, no importa si es repetido)</h2>   
+        <h2>Ingresar codigo del producto a desafectar (solo el codigo de fabricante, no importa si es repetido)</h2>   
         <hr />
         <form action="eliminar_producto.php" method="post"  > 
         <br>
