--- a/panel_control.html
+++ b/panel_control.html
@@ -6,6 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <title>SECCION PRODUCTO</title>
             <link rel="stylesheet" href="panel_control.css" />
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <script src="https://kit.fontawesome.com/a076d05399.js"></script>
           </head>
           <body>
@@ -16,19 +17,19 @@
               <ul class="nav">
                 <li>
                   <a href="agregar-producto.html">
-                    <i class="fas fa-server"></i>
+                    <i class="fa-solid fa-plus"></i>
                     <span>Ingresar producto nuevo</span>
                   </a>
                 </li>
                 <li>
                   <a href="eliminar-producto.html">
-                    <i class="fas fa-concierge-bell"></i>
+                    <i class="fa-solid fa-minus"></i>
                     <span>Desafectar producto</span>
                   </a>
                 </li>
                 <li>
                   <a href="editar-producto.html">
-                    <i class="fas fa-calendar-alt"></i>
+                    <i class="fa-solid fa-pen"></i>
                     <span>Editar producto</span>
                   </a>
                 </li>
@@ -40,24 +41,25 @@
                 </li>
                 <li>
                   <a href="nuevo_producto_copiado.html">
-                    <i class="fas fa-address-card"></i>
+                    <i class="fa-solid fa-circle-up"></i> 
                     <span>Agregar productos en base a otros</span>
                   </a>
                 </li>
                 <li>
-                    <a href="index.html">
-                      <i class="fas fa-address-card"></i>
+                    <a href="definitivo.html">
+                      <i class="fa-solid fa-trash"></i>
                       <span>Eliminar definitvamente producto</span>
                     </a>
                   </li>
                 <li>
                     <a href="index.html">
-                      <i class="fas fa-address-card"></i>
+                      <i class="fa-solid fa-house"></i>
                       <span>Volver</span>
                     </a>
                   </li>
               </ul>
             </div>
             </div>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js" integrity="sha512-naukR7I+Nk6gp7p5TMA4ycgfxaZBJ7MO5iC3Fp6ySQyKFHOGfpkSZkYVWV5R7u7cfAicxanwYQ5D1e17EfJcMA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
           </body>
         </html>
