--- a/definitivo.html
+++ b/definitivo.html
@@ -1,15 +1,11 @@
-<?php
-session_start();
-?>
 <html>
     <body>
-        <h2>Ingresar codigo del producto a eliminar</h2>   
+        <h2>Ingresar codigo del producto a eliminar definitivamente (solo el codigo de fabricante, no importa si es repetido)</h2>   
         <hr />
-        <form action="eliminar_producto.php" method="post"  > 
+        <form action="definitivo_producto.php" method="post"  > 
         <br>
         <h3>Codigo</h3>   
         <p><input type="text" name="prod" id="prod"></p> 
-        </div>   
         <ul><li><button type="submit">Ingresar</button></li></ul>
     </body>
 </html>
