--- a/iniciar_sesion.html
+++ b/iniciar_sesion.html
@@ -14,7 +14,7 @@
     <form action="inicio_sesion_usuario.php" method="post"  > 
     <h4>Inicio de sesion</h4>
     <input class="controls" type="email" name="correo" id="correo" placeholder="Correo">
-    <input class="controls" type="password" name="correo" id="correo" placeholder="Contraseña">
+    <input class="controls" type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña">
     <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
     <input class="botons" type="submit" value="Ingresar">
     <p><a href="registrarse.html">No tengo cuenta</a></p>
